[package]
name = "koios"
description = "A CLI tool to interact with the ChatGPT API and allow it to run commands on your machine to help you out."
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/shivam-sh/koi/"
license = "MIT"
categories = ["command-line-utilities"]

[[bin]]
name = "koi"
path = "src/main.rs"

[dependencies]
clap = { version = "4.1.11", features = ["derive"] }
confy = "0.5.1"
console = "0.15.5"
eventsource-client = "0.11"
futures = "0.3"
inquire = { version = "0.6", features = ["console"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
